# cookiecutter-pytest

./: .travis.yml  README.rst  cookiecutter.json
{{cookiecutter.app_name}}/: .gitignore  AUTHORS.rst  LICENSE  README.rst  doc-requirements.txt  pytest.ini  setup.cfg  setup.py  test-requirements.txt  tox.ini
{{cookiecutter.app_name}}/doc/source/: conf.py  index.rst
{{cookiecutter.app_name}}/test/: conftest.py  test_{{cookiecutter.app_name}}.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __init__.py  shell.py
