[metadata]
name = {{cookiecutter.app_name}}
summary = {{cookiecutter.app_name}} - {{cookiecutter.project_short_description}}.
description-file = README.rst
author = {{cookiecutter.full_name}}
author-email = {{cookiecutter.email}}
home-page = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    {{cookiecutter.app_name}} = {{cookiecutter.app_name}}.shell:main

[files]
packages =
    {{cookiecutter.app_name}}

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
